Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/zzzz_in_arbeit/pas/gstevent.pas

unit gstevent;

{$DEFINE read_enum}{$DEFINE read_struct}{$DEFINE read_function}

interface

uses
  fp_glib2, fp_gst, gstminiobject, gststructure, gststreams, gststreamcollection, gstsegment, gsttaglist, gsttoc, gstbuffer, gstformat, gstmessage, gstclock;

  {$IFDEF FPC}
  {$PACKRECORDS C}
  {$ENDIF}


  {$IFDEF read_enum}
type
  PGstEventTypeFlags = ^TGstEventTypeFlags;
  TGstEventTypeFlags = longint;
const
  GST_EVENT_TYPE_UPSTREAM = 1 shl 0;
  GST_EVENT_TYPE_DOWNSTREAM = 1 shl 1;
  GST_EVENT_TYPE_SERIALIZED = 1 shl 2;
  GST_EVENT_TYPE_STICKY = 1 shl 3;
  GST_EVENT_TYPE_STICKY_MULTI = 1 shl 4;

const
  GST_EVENT_NUM_SHIFT = 8;
  GST_EVENT_TYPE_BOTH = GST_EVENT_TYPE_UPSTREAM or GST_EVENT_TYPE_DOWNSTREAM;

type
  PGstEventType = ^TGstEventType;
  TGstEventType = longint;
const
  GST_EVENT_UNKNOWN = (0 shl GST_EVENT_NUM_SHIFT) or 0;
  GST_EVENT_FLUSH_START = (10 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_BOTH;
  GST_EVENT_FLUSH_STOP = (20 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_BOTH or GST_EVENT_TYPE_SERIALIZED;
  GST_EVENT_STREAM_START = (40 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY;
  GST_EVENT_CAPS = (50 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY;
  GST_EVENT_SEGMENT = (70 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY;
  GST_EVENT_STREAM_COLLECTION = (75 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY or GST_EVENT_TYPE_STICKY_MULTI;
  GST_EVENT_TAG = (80 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY or GST_EVENT_TYPE_STICKY_MULTI;
  GST_EVENT_BUFFERSIZE = (90 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY;
  GST_EVENT_SINK_MESSAGE = (100 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY or GST_EVENT_TYPE_STICKY_MULTI;
  GST_EVENT_STREAM_GROUP_DONE = (105 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY;
  GST_EVENT_EOS = (110 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY;
  GST_EVENT_TOC = (120 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY or GST_EVENT_TYPE_STICKY_MULTI;
  GST_EVENT_PROTECTION = (130 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY or GST_EVENT_TYPE_STICKY_MULTI;
  GST_EVENT_SEGMENT_DONE = (150 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED;
  GST_EVENT_GAP = (160 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED;
  GST_EVENT_INSTANT_RATE_CHANGE = (180 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_STICKY;
  GST_EVENT_QOS = (190 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_UPSTREAM;
  GST_EVENT_SEEK = (200 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_UPSTREAM;
  GST_EVENT_NAVIGATION = (210 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_UPSTREAM;
  GST_EVENT_LATENCY = (220 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_UPSTREAM;
  GST_EVENT_STEP = (230 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_UPSTREAM;
  GST_EVENT_RECONFIGURE = (240 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_UPSTREAM;
  GST_EVENT_TOC_SELECT = (250 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_UPSTREAM;
  GST_EVENT_SELECT_STREAMS = (260 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_UPSTREAM;
  GST_EVENT_INSTANT_RATE_SYNC_TIME = (261 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_UPSTREAM;
  GST_EVENT_CUSTOM_UPSTREAM = (270 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_UPSTREAM;
  GST_EVENT_CUSTOM_DOWNSTREAM = (280 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED;
  GST_EVENT_CUSTOM_DOWNSTREAM_OOB = (290 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM;
  GST_EVENT_CUSTOM_DOWNSTREAM_STICKY = (300 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_DOWNSTREAM or GST_EVENT_TYPE_SERIALIZED or GST_EVENT_TYPE_STICKY or GST_EVENT_TYPE_STICKY_MULTI;
  GST_EVENT_CUSTOM_BOTH = (310 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_BOTH or GST_EVENT_TYPE_SERIALIZED;
  GST_EVENT_CUSTOM_BOTH_OOB = (320 shl GST_EVENT_NUM_SHIFT) or GST_EVENT_TYPE_BOTH;

type
  PGstStreamFlags = ^TGstStreamFlags;
  TGstStreamFlags = longint;
const
  GST_STREAM_FLAG_NONE = 0;
  GST_STREAM_FLAG_SPARSE = 1 shl 0;
  GST_STREAM_FLAG_SELECT = 1 shl 1;
  GST_STREAM_FLAG_UNSELECT = 1 shl 2;

type
  PGstQOSType = ^TGstQOSType;
  TGstQOSType = longint;
const
  GST_QOS_TYPE_OVERFLOW = 0;
  GST_QOS_TYPE_UNDERFLOW = 1;
  GST_QOS_TYPE_THROTTLE = 2;

type
  PGstGapFlags = ^TGstGapFlags;
  TGstGapFlags = longint;
const
  GST_GAP_FLAG_MISSING_DATA = 1 shl 0;
  {$ENDIF read_enum}

  {$IFDEF read_struct}
type
  PPGstEvent = ^PGstEvent;
  PGstEvent = ^TGstEvent;
  TGstEvent = record
    mini_object: TGstMiniObject;
    _type: TGstEventType;
    timestamp: Tguint64;
    seqnum: Tguint32;
  end;
  {$ENDIF read_struct}

  {$IFDEF read_function}
var
  _gst_event_type: TGType; cvar;external libgstreamer;

function gst_event_make_writable(event: PGstEvent): PGstEvent; cdecl; external libgstreamer;
function gst_event_is_writable(event: PGstEvent): Tgboolean; cdecl; external libgstreamer;
function gst_event_replace(old_event: PPGstEvent; new_event: PGstEvent): Tgboolean; cdecl; external libgstreamer;
function gst_event_steal(old_event: PPGstEvent): PGstEvent; cdecl; external libgstreamer;
function gst_event_take(old_event: PPGstEvent; new_event: PGstEvent): Tgboolean; cdecl; external libgstreamer;
